--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,13 +1,3 @@
-image: gitlab-registry-dev.cern.ch/ctojeiro/mkdocs-to-gitlabpagessite-migration:latest
-variables:
-  GIT_SUBMODULE_STRATEGY: recursive
-pages:
-  script:
-    - if [[ -f requirements.txt ]]; then pip install -r requirements.txt; fi;
-    - mkdocs build -d public
-  artifacts:
-    paths:
-    - public
-    expire_in: 1 hour
-  only:
-  - master
+include:
+  - project: 'authoring/documentation/mkdocs-ci'
+    file: 'mkdocs-gitlab-pages.gitlab-ci.yml'
