--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,6 +24,8 @@ nav:
       - 'Electronics' : guides/electronics.md
       - 'Particle Physics' : guides/pp.md
       - 'Silicon Detectors' : guides/silicon.md
+    - 'Procedures' :
+      - 'Shutdown' : procedures/shutdown.md
     - 'Monitoring' :
       - 'InfluxDB + GrafAna' : monitoring/influx.md
     - 'ITk Strips':
