--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -51,6 +51,8 @@ nav:
               - 'Hybrid Metrology': itkstrips/hybrid_and_module_building/metrology/metrology_hybridmetrology.md
               - 'Module Metrology': itkstrips/hybrid_and_module_building/metrology/metrology_modulemetrology.md
           - 'ASIC Assembly': itkstrips/hybrid_and_module_building/asicassembly/asicassembly.md
+      - 'Electrical Testing':
+          - 'Single Module Testbox': itkstrips/electricaltesting/cheatsheet_PPB_module_1Nov23_v1.txt
     - 'Muon Collider':
         - 'References': muoncollider/references.md
         - 'MadGraph': muoncollider/madgraph.md
