First commit of wire bonding cheat sheets

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -57,6 +57,7 @@ nav:
               - 'Linux/Bash': itkstrips/hybrid_and_module_building/cheatsheets/cs_linuxbash.md
               - 'GNU Emacs': itkstrips/hybrid_and_module_building/cheatsheets/cs_emacs.md
               - 'Magic Spreadsheets Gluing': itkstrips/hybrid_and_module_building/cheatsheets/cs_magicspreadsheets_assembly.md
+              - 'Magic Spreadsheets Wire Bonding': itkstrips/hybrid_and_module_building/cheatsheets/cs_magicspreadsheets_wirebonding.md
       - 'Electrical Testing':
           - 'Single Module Testbox': itkstrips/electricaltesting/cheatsheet_PPB_module_9Nov23_v1.txt
     - 'Muon Collider':
